[package]
name = "liblaika"
version = "0.1.0"
edition = "2021"
authors = ["Aeybel Varghese <aeybelvarghese@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/AeybelV/liblaika"

[lib]
name = "laika"
crate-type = ["lib", "cdylib"]  # "lib" for Rust, "cdylib" for C

[dependencies]
chrono = "0.4.38"
reed-solomon = "0.2.1"
reed-solomon-erasure = "6.0.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
